--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Matheus\\AppData\\Roaming\\python.exe"
+    "python.pythonPath": "C:\\Python37\\python.exe"
 }
